--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -48,6 +48,10 @@ header{
       padding-top: 4px;
       font-size: 12px;
 
+      @media screen and (max) {
+        padding-right:7px;
+      }
+
       @media screen and (max-width:600px) {
         font-size:7px;
         padding-left: 1px;
