--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -21,6 +21,13 @@ header{
     font-family: $avenir-roman !important;
     position: relative; 
     height: 37px;
+
+    .padding-lr0{
+      @media screen and (max-width:600px){
+        padding-left:0px !important;
+        padding-right:0px !important;
+      }
+    }
     
     .float-right{
 
@@ -53,8 +60,8 @@ header{
       padding-top: 4px;
       font-size: 12px;
 
-      @media screen and (max) {
-        padding-right:7px;
+      @media screen and (max-width:500px) {
+        padding-right:3px !important;
       }
 
       @media screen and (max-width:600px) {
