--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,13 @@ header .top-nav {
   height: 37px;
 }
 
+@media screen and (max-width: 600px) {
+  header .top-nav .padding-lr0 {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+}
+
 header .top-nav .float-right img {
   width: 85%;
   padding: 5px;
@@ -339,9 +346,9 @@ header .top-nav a {
   font-size: 12px;
 }
 
-@media screen and (max) {
+@media screen and (max-width: 500px) {
   header .top-nav a {
-    padding-right: 7px;
+    padding-right: 3px !important;
   }
 }
 
