--- a/css/_homepage.scss
+++ b/css/_homepage.scss
@@ -645,6 +645,10 @@
   .tweet-tweet{
     iframe{
       width: 100% !important;
+
+      @media screen and (max-width:500px) {
+        max-width: 390px !important
+      }
      
       
     }
