--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -21,6 +21,7 @@ header{
     font-family: $avenir-roman !important;
     position: relative; 
     height: 37px;
+    padding-top: 7px;
 
     .padding-lr0{
       @media screen and (max-width:600px){
@@ -30,10 +31,12 @@ header{
     }
     
     .float-right{
+      position: absolute;
+      right: 0px !important;
 
       img{
         width: 85%;
-        padding: 5px;
+        padding: 0px 5px;
 
         &:nth-child(2){
           width: 85%;
@@ -59,6 +62,10 @@ header{
       display: inline-block;
       padding-top: 4px;
       font-size: 12px;
+
+      &:nth-child(3){
+        padding-right: 0px !important;
+      }
 
       @media screen and (max-width:500px) {
         padding-right:3px !important;
